--- a/quiz4/index.html
+++ b/quiz4/index.html
@@ -68,8 +68,8 @@
     }
   </style>
 </head>
-  
-  <!-- Meta Pixel Code -->
+
+<!-- Meta Pixel Code -->
 <script>
   !function(f,b,e,v,n,t,s)
   {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -86,7 +86,8 @@
   src="https://www.facebook.com/tr?id=398615235578916&ev=addtocart&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
-  
+
+
 <body> 
   <div class="container">
     <div class="black">
@@ -132,7 +133,7 @@
       </div>
     </div>
     <p style="text-align: center; font-weight: bold;">© 2022 – Todos los derechos reservados. Este sitio no es parte ni está respaldado por Facebook. Facebook es una marca registrada de Facebook, Inc.</p>
-    <p style="text-align: center; font-weight: bold;"><a href="https://adrianacunha.site/termos.html" style="color: black;">Condiciones de uso</a> | <a href="https://adrianacunha.site/privacidade.html" style="color: black;">Política de Privacidad</a></p>
+    <p style="text-align: center; font-weight: bold;"><a href="https://keliferreira.site/termos.html" style="color: black;">Condiciones de uso</a> | <a href="https://keliferreira.site/privacidade.html" style="color: black;">Política de Privacidad</a></p>
   </div>
   <script>
     function segunda() {
@@ -148,7 +149,7 @@
       document.getElementById("quarta").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://adrianacunha.site" // SEU LINK AQUI
+      location.href = "https://keliferreira.site" // SEU LINK AQUI
     }
   </script>
 </body>
