--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
   src="https://www.facebook.com/tr?id=398615235578916&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C9DZ15ZYJK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C9DZ15ZYJK');
+</script>
 
   <body>
 
