--- a/index.html
+++ b/index.html
@@ -28,35 +28,6 @@
     </style>
 
   </head>
-
-<!-- Meta Pixel Code -->
-<script>
-  !function(f,b,e,v,n,t,s)
-  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-  n.queue=[];t=b.createElement(e);t.async=!0;
-  t.src=v;s=b.getElementsByTagName(e)[0];
-  s.parentNode.insertBefore(t,s)}(window, document,'script',
-  'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '398615235578916');
-  fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=398615235578916&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
-  
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-C9DZ15ZYJK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-C9DZ15ZYJK');
-</script>
-
   <body>
 
     <header class="py-4">
@@ -67,16 +38,23 @@
             <img class="img-fluid" src="./assets/img/ex.png">
 
             <!-- Headline -->
-            <h3 class="my-4"><b></b></h3>
+            <h3 class="my-4">Los ingredientes simples de vitamina 6 derriten mucha grasa<b></b></h3>
 
             <div id="vid_62b3534647ce1b000ba10733" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62b3534647ce1b000ba10733" src="https://images.converteai.net/ac70dec2-0890-4800-87bf-5d4f269739de/players/62b3534647ce1b000ba10733/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62b3534647ce1b000ba10733" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62b3534647ce1b000ba10733">var s=document.createElement("script");s.src="https://scripts.converteai.net/ac70dec2-0890-4800-87bf-5d4f269739de/players/62b3534647ce1b000ba10733/player.js",s.async=!0,document.head.appendChild(s);</script>
             <!-- Botão -->
-            <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.hotmart.com/A72669193V?checkoutMode=10" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">¡QUIERO ACCEDER!</span>
-                <span class="span-btn2">(Atención: plazas limitadas)</span>
-              </a>
-            </div>
+            <script type="text/javascript">
+  function importHotmart(){ 
+    var imported = document.createElement('script'); 
+    imported.src = 'https://static.hotmart.com/checkout/widget.min.js'; 
+    document.head.appendChild(imported); 
+    var link = document.createElement('link'); 
+    link.rel = 'stylesheet'; 
+    link.type = 'text/css'; 
+    link.href = 'https://static.hotmart.com/css/hotmart-fb.min.css'; 
+    document.head.appendChild(link);  } 
+  importHotmart(); 
+ </script> 
+ <a onclick="return false;" href="https://pay.hotmart.com/T72773306R" class="hotmart-fb hotmart__button-checkout"><img src='https://static.hotmart.com/img/btn-buy-green.png'></a>  
 
 
             <!-- Termos de Uso e Política de Privacidade -->
@@ -87,7 +65,7 @@
     </header>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")},1303000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")},0); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
