--- a/index.html
+++ b/index.html
@@ -43,19 +43,18 @@
             <div id="vid_62b3534647ce1b000ba10733" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62b3534647ce1b000ba10733" src="https://images.converteai.net/ac70dec2-0890-4800-87bf-5d4f269739de/players/62b3534647ce1b000ba10733/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62b3534647ce1b000ba10733" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62b3534647ce1b000ba10733">var s=document.createElement("script");s.src="https://scripts.converteai.net/ac70dec2-0890-4800-87bf-5d4f269739de/players/62b3534647ce1b000ba10733/player.js",s.async=!0,document.head.appendChild(s);</script>
             <!-- Botão -->
             <script type="text/javascript">
-  function importHotmart(){ 
-    var imported = document.createElement('script'); 
-    imported.src = 'https://static.hotmart.com/checkout/widget.min.js'; 
-    document.head.appendChild(imported); 
-    var link = document.createElement('link'); 
-    link.rel = 'stylesheet'; 
-    link.type = 'text/css'; 
-    link.href = 'https://static.hotmart.com/css/hotmart-fb.min.css'; 
-    document.head.appendChild(link);  } 
-  importHotmart(); 
+	function importHotmart(){ 
+ 		var imported = document.createElement('script'); 
+ 		imported.src = 'https://static.hotmart.com/checkout/widget.min.js'; 
+ 		document.head.appendChild(imported); 
+		var link = document.createElement('link'); 
+		link.rel = 'stylesheet'; 
+		link.type = 'text/css'; 
+		link.href = 'https://static.hotmart.com/css/hotmart-fb.min.css'; 
+		document.head.appendChild(link);	} 
+ 	importHotmart(); 
  </script> 
- <a onclick="return false;" href="https://pay.hotmart.com/T72773306R" class="hotmart-fb hotmart__button-checkout"><img src='https://static.hotmart.com/img/btn-buy-green.png'></a>  
-
+ <a onclick="return false;" href="https://pay.hotmart.com/T72773306R?checkoutMode=2" class="hotmart-fb hotmart__button-checkout"><img src='https://static.hotmart.com/img/btn-buy-green.png'></a> 
 
             <!-- Termos de Uso e Política de Privacidade -->
             <div class="text-white mt-4"><a href="termos.html" class="text-white">Condiciones de uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidad</a></div>
