--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Protocolo Cero Vientre</title>
+    <title>o segredo de uma vida saldavel</title>
     
     <style type="text/css">
       body {
@@ -38,7 +38,7 @@
             <img class="img-fluid" src="./assets/img/ex.png">
 
             <!-- Headline -->
-            <h3 class="my-4">Los ingredientes simples de vitamina 6 derriten mucha grasa<b></b></h3>
+            <h3 class="my-4">esse passo a passo pode mudar tudo para voce<b></b></h3>
 
             <div id="vid_62b3534647ce1b000ba10733" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62b3534647ce1b000ba10733" src="https://images.converteai.net/ac70dec2-0890-4800-87bf-5d4f269739de/players/62b3534647ce1b000ba10733/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62b3534647ce1b000ba10733" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62b3534647ce1b000ba10733">var s=document.createElement("script");s.src="https://scripts.converteai.net/ac70dec2-0890-4800-87bf-5d4f269739de/players/62b3534647ce1b000ba10733/player.js",s.async=!0,document.head.appendChild(s);</script>
             <!-- Botão -->
@@ -54,7 +54,7 @@
 		document.head.appendChild(link);	} 
  	importHotmart(); 
  </script> 
- <a onclick="return false;" href="https://pay.hotmart.com/T72773306R?checkoutMode=2" class="hotmart-fb hotmart__button-checkout"><img src='https://static.hotmart.com/img/btn-buy-green.png'></a> 
+ <a onclick="return false;" href="https://pay.hotmart.com/T72773306R" class="hotmart-fb hotmart__button-checkout"><img src='https://static.hotmart.com/img/btn-buy-green.png'></a> 
 
             <!-- Termos de Uso e Política de Privacidade -->
             <div class="text-white mt-4"><a href="termos.html" class="text-white">Condiciones de uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidad</a></div>
